PageRating/src/objects/Venue__c.object
<CustomObject>
    <description>Various venues for conducting Corporate Events</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Key contact point to reach out for booking deals</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Venue Management</relationshipLabel>
        <relationshipName>Venue_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Deal__c</fullName>
        <inlineHelpText>Has Value if there is corporate deal agreed with this Venue or Provider</inlineHelpText>
        <label>Corporate Deal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Count__c</fullName>
        <inlineHelpText>Event count till date</inlineHelpText>
        <label>Past Event Count</label>
        <summaryFilterItems>
            <field>Event_Request__c.Status__c</field>
            <operation>equals</operation>
            <value>Commenced</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Request__c.Venue__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Deal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Spend_Till_Date__c</fullName>
        <inlineHelpText>Sum of all expense spent at this venue</inlineHelpText>
        <label>Total Spend Till Date</label>
        <summarizedField>Event_Request__c.Actual_Expense__c</summarizedField>
        <summaryForeignKey>Event_Request__c.Venue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Venue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>